# symboard_wizard

./: .env.pub  .gitignore  CHANGELOG  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  config.yml  install  pyproject.toml  requirements.txt  settings.py  setup.py
.circleci/: config.yml
docs/class_diagram/: readme.md
docs/res/: ansi.txt  example.symboard  washington-english.keylayout
docs/source/: conf.py  index.rst
scripts/: install.py  show_states.py
symboard/: __init__.py  actions.py  alphabets.yaml  errors.py  file_writers.py  input.yml  iso.yaml  keylayout.py  keylayouts.py  main.py  orchestrator.py  parsers.py  settings.py  states.py  yaml_spec.py
symboard/file_writer/: KeylayoutFileWriter.py
symboard/keyboard_objects/: AnsiKeylayout.py  Keylayout.py
symboard/keylayouts/: AnsiKeylayout.py  JDvorak.keylayout  ansi_dvorak_keylayout.py  ansi_keylayout.py  builders.py  iso.yaml  iso_dvorak.yaml  iso_dvorak_keylayout.py  iso_jdvorak_keylayout.py  iso_jdvorak_keylayout.yaml  iso_keylayout.py  keylayouts.py
symboard/orchestrator/: Orchestrator.py
symboard/parsers/: YamlParser.py  base_parsers.py
symboard/states/: acute.yaml  arrows.yaml  cyrillic.yaml  greek.yaml  latin_diacritics.yaml  latin_extensions.yaml  latin_typographical.yaml  perso_arabic.yaml
symboard/test/: test_main.py
symboard/utils/: collections.py  date_time.py
test/: qwerty.keylayout  test_file_writers.py  test_main.py  test_parsers.py  utils.py
test/integration/: test_keylayouts.py
test/integration/res/: iso.keylayout  iso_dvorak.keylayout  iso_jdvorak.keylayout  minimal_iso.yaml
test/res/: expected_ansi_dvorak_keylayout.keylayout  expected_ansi_keylayout.keylayout  minimal_input_ansi.yaml
test/scripts/: test_show_state.py
test/test_integration/: test_keylayouts.py  test_main.py
test/test_integration/res/: expected_ansi_dvorak_keylayout.keylayout  expected_ansi_keylayout.keylayout  iso_dvorak.keylayout  (+4 more)
test/test_keylayouts/: test_ansi_dvorak_keylayout.py  test_ansi_keylayout.py  test_builders.py  test_iso_keylayout.py  test_keylayouts.py
test/test_units/: test_actions.py  test_file_writers.py  test_keylayouts.py  test_main.py  test_states.py  test_states_yaml.py
test/units/: test_actions.py  test_file_writers.py  test_keylayouts.py  test_orchestrator.py  test_parsers.py  test_states.py
(+10 files in other folders)
