[tool.poetry]
name = 'symboard'  # TODO
version = '0.4.0'  # TODO
description = 'Change or add to your keyboard with ease.'  # Verify SSL
authors = ['Andrew J. Young <andrew@sierracompute.com>']
readme = 'README.md'

homepage = 'https://github.com/andrewjunyoung/symboard'
repository = 'https://github.com/andrewjunyoung/symboard'

keywords = ['keyboard', 'customization', 'symboard']

packages = [
  {include = 'symboard'},
  {include = 'scripts'},
]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"  # TODO: This should be tested with tox.
lxml = "^4.9.1"
PyYAML = "^5.1.2"
bleach = "^3.1.4"  # TODO: Check if needed.
python-dotenv = "^0.13.0"
tabulate = "^0.8.7"
nose = "^1.3.7"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
neovim = "^0.3.1"
sexpdata = "^0.0.3"  # TODO: Check if needed.
websocket-client = "^0.57.0"  # TODO: Check if needed.
Sphinx = "^3.0.3"
sphinx_rtd_theme = "^0.4.3"

[tool.poetry.scripts]
# TODO

[[source]]
verify_ssl = true
